[gd_scene load_steps=7 format=3 uid="uid://cb6obgb5qrf3s"]

[ext_resource type="Script" path="res://Universal_Scripts/QuickMenu.gd" id="1_j6qhw"]
[ext_resource type="FontFile" uid="uid://dt2unv0gyk7om" path="res://fonts/TitleFont.tres" id="2_mn42p"]
[ext_resource type="PackedScene" uid="uid://dm80pcxu7kvcx" path="res://Universal_Scenes/UI/Button.tscn" id="3_hpu16"]
[ext_resource type="PackedScene" uid="uid://do42anfb1sgba" path="res://Assorted_Scenes/settings.tscn" id="4_o6ace"]
[ext_resource type="FontFile" uid="uid://dj8l8uk81jfik" path="res://fonts/MediumFont.tres" id="5_gxw4n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w7w8g"]
bg_color = Color(0, 0.741176, 1, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[node name="QuickMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j6qhw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.72549)

[node name="Pause_Title" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 20.0
offset_right = 393.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("2_mn42p")
theme_override_font_sizes/font_size = 75
text = "PAUSED"

[node name="Level_Name" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 100.0
offset_right = 393.0
offset_bottom = 179.0
theme_override_fonts/font = ExtResource("2_mn42p")
theme_override_font_sizes/font_size = 50
text = "LevelName"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = -540.0
offset_right = 379.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 2

[node name="Resume" parent="VBoxContainer" instance=ExtResource("3_hpu16")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "  Resume "
alignment = 0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Settings" parent="VBoxContainer" instance=ExtResource("3_hpu16")]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "  Settings "
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MainMenu" parent="VBoxContainer" instance=ExtResource("3_hpu16")]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "  Return to Main Menu
"
alignment = 0

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SaveAndExit" parent="VBoxContainer" instance=ExtResource("3_hpu16")]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "  Quit Game
"
alignment = 0

[node name="Settings" parent="." instance=ExtResource("4_o6ace")]
visible = false
layout_mode = 1

[node name="QuitConfirmation" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -100.0
offset_right = 210.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w7w8g")

[node name="ConfirmationDialog" type="Label" parent="QuitConfirmation"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 10.0
offset_right = 176.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_gxw4n")
theme_override_font_sizes/font_size = 20
text = "Are you sure you want to exit the game? 
You will lose all save progress since your
last checkpoint."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="QuitConfirmation"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="QuitConfirmation/ButtonContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Quit" parent="QuitConfirmation/ButtonContainer" instance=ExtResource("3_hpu16")]
layout_mode = 2
text = "Quit"

[node name="MarginContainer3" type="MarginContainer" parent="QuitConfirmation/ButtonContainer"]
visible = false
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="SaveAndQuit" parent="QuitConfirmation/ButtonContainer" instance=ExtResource("3_hpu16")]
visible = false
layout_mode = 2
disabled = true
text = "Save and Quit"

[node name="MarginContainer4" type="MarginContainer" parent="QuitConfirmation/ButtonContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Resume" parent="QuitConfirmation/ButtonContainer" instance=ExtResource("3_hpu16")]
layout_mode = 2
text = "Nevermind"

[node name="MarginContainer" type="MarginContainer" parent="QuitConfirmation/ButtonContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveAndExit" to="." method="_on_save_and_exit_pressed"]
[connection signal="pressed" from="QuitConfirmation/ButtonContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="QuitConfirmation/ButtonContainer/Resume" to="." method="_on_quit_menu_resume_pressed"]
